--- a/assets/css/variables-blue.css
+++ b/assets/css/variables-blue.css
@@ -37,7 +37,7 @@
   --color-links-hover: #4797ff;
 
   /* Primay colors */
-  --color-primary: #3279fc;
+  --color-primary: #082dc2;
   --color-primary-light: #4797ff;
   --color-primary-dark: #1c61e2;
 
